# gatekeeper2-exp

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.gs  Dockerfile.quad  colcon_defaults.yaml  docker-compose.quad.yaml  docker-compose.yaml
colcon_ws/: frames.gv
colcon_ws/src/DecompROS2/decomp_ros/include/decomp_ros/: decomp_ros_component.hpp
colcon_ws/src/DecompROS2/decomp_ros/src/: decomp_ros_component.cpp
colcon_ws/src/DecompROS2/decomp_ros_node/include/decompRos/: decompRos.hpp
colcon_ws/src/DecompROS2/decomp_ros_node/src/: decompRos.cpp
colcon_ws/src/all_launch/: package.xml
colcon_ws/src/all_launch/launch/: config_d455.yaml  decomp_launch.py  pcl_filter.launch.py  rs_decomp.launch.py  rs_launch.py  rs_pcl_decomp.launch.py
colcon_ws/src/gatekeeper/gatekeeper/: mpc.py  mpc_planner_OSQP.py
colcon_ws/src/gatekeeper_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/gatekeeper_msgs/msg/: DITrajectory.msg
gs_ws/src/DecompROS2/decomp_ros_node/src/: decompRos.cpp
gs_ws/src/all_launch/: CMakeLists.txt
gs_ws/src/all_launch/launch/: octomap_launch.py  pcl_filter2.launch.py  rs_pcl.launch.py
